--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,7 +6,7 @@
         "id": "cP5zh7Ww85Fm"
       },
       "source": [
-        "# Proyek Analisis Data: Nama dataset\n",
+        "# Proyek Analisis Data: E-Commerce Public Dataset\n",
         "- Nama: Muhammad Randy\n",
         "- Email: muhammadrandy0027@gmail.com\n",
         "- Id Dicoding: https://www.dicoding.com/users/muhammad_randy_tprd"
